homepage basics done

--- a/style.css
+++ b/style.css
@@ -1,8 +1,12 @@
 body {
     background: #222;
     color: #f0f0f0;
+    height: 100%;
+    font-family: monospace;
   }
-  
+
+/* // Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) { 
   .animated-text {
     position: relative;
     /* top: 50%; */
@@ -13,3 +17,103 @@ body {
     white-space: nowrap;
     text-shadow: 0 2px 2px rgba(#000, 0.9);
   }
+}
+
+/* // Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) { 
+  .animated-text {
+    position: relative;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    font-family: monospace;
+    font-size: 60px;
+    white-space: nowrap;
+    text-shadow: 0 2px 2px rgba(#000, 0.9);
+  }
+}
+
+/* // Large devices (desktops, 992px and up) */
+@media (min-width: 992px) { 
+  .animated-text {
+    position: relative;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    font-family: monospace;
+    font-size: 60px;
+    white-space: nowrap;
+    text-shadow: 0 2px 2px rgba(#000, 0.9);
+  }
+
+  .navbar {
+    padding-top: 3.5rem;
+    font-size: 20px;
+  }
+}
+
+/* // Extra large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) { 
+  .animated-text {
+    position: relative;
+    /* top: 50%; */
+    /* left: 50%; */
+    /* transform: translate(-50%, -50%); */
+    font-family: monospace;
+    font-size: 60px;
+    white-space: nowrap;
+    text-shadow: 0 2px 2px rgba(#000, 0.9);
+  }
+
+  .navbar {
+    padding-top: 3.5rem;
+    font-size: 20px;
+  }
+}
+
+  
+  .nav-item-separate {
+    padding-right: 60px;
+  }
+
+  .vertical-center {
+    position: absolute;
+    top: 35% ;
+  }
+
+/* ============footer social icons=========== */
+
+.social:hover {
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+.social {
+  -webkit-transform: scale(0.8);
+  /* Browser Variations: */
+  
+  -moz-transform: scale(0.8);
+  -o-transform: scale(0.8);
+  -webkit-transition-duration: 0.5s;
+  -moz-transition-duration: 0.5s;
+  -o-transition-duration: 0.5s;
+  color: #f0f0f0;
+  margin-right: 10px;
+}
+
+/*
+ Multicoloured Hover Variations
+*/
+
+#social-fb:hover {
+  color: #1074AF;
+}
+#social-tw:hover {
+  color: #4099FF;
+}
+#social-gp:hover {
+  color: #000;
+}
+#social-em:hover {
+  color: #f39c12;
+}
