--- a/style.css
+++ b/style.css
@@ -1,12 +1,14 @@
 body {
-    background: #222;
-    color: #f0f0f0;
-    height: 100%;
-    font-family: monospace;
-  }
+  background: #222;
+  color: #f0f0f0;
+  height: 100%;
+  font-family: monospace !important;
+  overflow: hidden;
+}
 
 /* // Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) { 
+
+@media (min-width: 576px) {
   .animated-text {
     position: relative;
     /* top: 50%; */
@@ -20,7 +22,8 @@ body {
 }
 
 /* // Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) { 
+
+@media (min-width: 768px) {
   .animated-text {
     position: relative;
     /* top: 50%; */
@@ -34,7 +37,8 @@ body {
 }
 
 /* // Large devices (desktops, 992px and up) */
-@media (min-width: 992px) { 
+
+@media (min-width: 992px) {
   .animated-text {
     position: relative;
     /* top: 50%; */
@@ -45,7 +49,6 @@ body {
     white-space: nowrap;
     text-shadow: 0 2px 2px rgba(#000, 0.9);
   }
-
   .navbar {
     padding-top: 3.5rem;
     font-size: 20px;
@@ -53,7 +56,8 @@ body {
 }
 
 /* // Extra large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) { 
+
+@media (min-width: 1200px) {
   .animated-text {
     position: relative;
     /* top: 50%; */
@@ -64,22 +68,60 @@ body {
     white-space: nowrap;
     text-shadow: 0 2px 2px rgba(#000, 0.9);
   }
-
   .navbar {
     padding-top: 3.5rem;
     font-size: 20px;
   }
 }
 
-  
-  .nav-item-separate {
-    padding-right: 60px;
-  }
+#animated-text-container {
+  padding-left: 30px !important;
+}
 
-  .vertical-center {
-    position: absolute;
-    top: 35% ;
-  }
+.text-under {
+  padding-left: 0px !important;
+}
+
+.text-under-animation {
+  padding-left: 20px;
+  -webkit-animation-delay: 3s;
+  display: inline-block;
+  font-size: 1.75rem;
+  font: monospace !important;
+}
+
+.text-under-animation1 {
+  padding-left: 20px;
+  -webkit-animation-delay: 4s;
+  display: inline-block;
+  font-size: 1.75rem;
+  font: monospace !important;
+}
+
+.text-under-animation2 {
+  padding-left: 20px;
+  -webkit-animation-delay: 5s;
+  display: inline-block;
+  font-size: 1.75rem;
+  font: monospace !important;
+}
+
+.text-under-animation3 {
+  padding-left: 20px;
+  -webkit-animation-delay: 6s;
+  display: inline-block;
+  font-size: 1.75rem;
+  font: monospace !important;
+}
+
+.nav-item-separate {
+  padding-right: 60px;
+}
+
+.vertical-center {
+  position: absolute;
+  top: 25%;
+}
 
 /* ============footer social icons=========== */
 
@@ -88,10 +130,10 @@ body {
   -moz-transform: scale(1.1);
   -o-transform: scale(1.1);
 }
+
 .social {
   -webkit-transform: scale(0.8);
   /* Browser Variations: */
-  
   -moz-transform: scale(0.8);
   -o-transform: scale(0.8);
   -webkit-transition-duration: 0.5s;
@@ -108,12 +150,107 @@ body {
 #social-fb:hover {
   color: #1074AF;
 }
+
 #social-tw:hover {
   color: #4099FF;
 }
+
 #social-gp:hover {
   color: #000;
 }
+
 #social-em:hover {
   color: #f39c12;
+}
+
+/* ==============PORTFOLIO================ */
+
+.portfolio {
+  margin-bottom: -15px;
+}
+
+.portfolio .portfolio-item {
+  position: relative;
+  display: block;
+  max-width: 25rem;
+  margin-bottom: 15px;
+}
+
+.portfolio .portfolio-item .portfolio-item-caption {
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  transition: all ease 0.5s;
+  opacity: 0;
+  background-color: rgba(24, 188, 156, 0.9);
+}
+
+.portfolio .portfolio-item .portfolio-item-caption:hover {
+  opacity: 1;
+}
+
+.portfolio .portfolio-item .portfolio-item-caption .portfolio-item-caption-content {
+  font-size: 1.5rem;
+}
+
+@media (min-width: 576px) {
+  .portfolio {
+    margin-bottom: -30px;
+  }
+  .portfolio .portfolio-item {
+    margin-bottom: 30px;
+  }
+}
+
+.portfolio-modal .portfolio-modal-dialog {
+  padding: 3rem 1rem;
+  min-height: calc(100vh - 2rem);
+  margin: 1rem calc(1rem - 8px);
+  position: relative;
+  z-index: 2;
+  -moz-box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 3rem 1rem rgba(0, 0, 0, 0.5);
+}
+
+.portfolio-modal .portfolio-modal-dialog .close-button {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
+}
+
+.portfolio-modal .portfolio-modal-dialog .close-button i {
+  line-height: 38px;
+}
+
+.portfolio-modal .portfolio-modal-dialog h2 {
+  font-size: 2rem;
+}
+
+@media (min-width: 768px) {
+  .portfolio-modal .portfolio-modal-dialog {
+    min-height: 100vh;
+    padding: 5rem;
+    margin: 3rem calc(3rem - 8px);
+  }
+  .portfolio-modal .portfolio-modal-dialog h2 {
+    font-size: 3rem;
+  }
+}
+
+.card-img-top {
+  width: 100%;
+  height: 15vw;
+  object-fit: cover;
+}
+
+/* particles.js */
+
+canvas {
+  display: block;
+}
+
+#particle-background {
+  position: absolute;
+  width: 100%;
+  height: 1000%;
 }
