--- a/style.css
+++ b/style.css
@@ -4,6 +4,17 @@ body {
   height: 100%;
   font-family: monospace !important;
   overflow: hidden;
+  margin: 0px;
+  padding: 0px;
+
+} 
+
+/* particles.js */
+
+#particles-js {
+  /* position: absolute; */
+  width: 100%;
+  height: 1000%;
 }
 
 /* // Small devices (landscape phones, 576px and up) */
@@ -15,7 +26,7 @@ body {
     /* left: 50%; */
     /* transform: translate(-50%, -50%); */
     font-family: monospace;
-    font-size: 60px;
+    /* font-size: 60px; */
     white-space: nowrap;
     text-shadow: 0 2px 2px rgba(#000, 0.9);
   }
@@ -30,7 +41,7 @@ body {
     /* left: 50%; */
     /* transform: translate(-50%, -50%); */
     font-family: monospace;
-    font-size: 60px;
+    /* font-size: 60px; */
     white-space: nowrap;
     text-shadow: 0 2px 2px rgba(#000, 0.9);
   }
@@ -45,7 +56,7 @@ body {
     /* left: 50%; */
     /* transform: translate(-50%, -50%); */
     font-family: monospace;
-    font-size: 60px;
+    /* font-size: 60px; */
     white-space: nowrap;
     text-shadow: 0 2px 2px rgba(#000, 0.9);
   }
@@ -64,7 +75,7 @@ body {
     /* left: 50%; */
     /* transform: translate(-50%, -50%); */
     font-family: monospace;
-    font-size: 60px;
+    /* font-size: 60px; */
     white-space: nowrap;
     text-shadow: 0 2px 2px rgba(#000, 0.9);
   }
@@ -86,7 +97,7 @@ body {
   padding-left: 20px;
   -webkit-animation-delay: 3s;
   display: inline-block;
-  font-size: 1.75rem;
+  /* font-size: 1.75rem; */
   font: monospace !important;
 }
 
@@ -94,7 +105,7 @@ body {
   padding-left: 20px;
   -webkit-animation-delay: 4s;
   display: inline-block;
-  font-size: 1.75rem;
+  /* font-size: 1.75rem; */
   font: monospace !important;
 }
 
@@ -102,7 +113,7 @@ body {
   padding-left: 20px;
   -webkit-animation-delay: 5s;
   display: inline-block;
-  font-size: 1.75rem;
+  /* font-size: 1.75rem; */
   font: monospace !important;
 }
 
@@ -110,7 +121,7 @@ body {
   padding-left: 20px;
   -webkit-animation-delay: 6s;
   display: inline-block;
-  font-size: 1.75rem;
+  /* font-size: 1.75rem; */
   font: monospace !important;
 }
 
@@ -243,14 +254,3 @@ body {
   object-fit: cover;
 }
 
-/* particles.js */
-
-canvas {
-  display: block;
-}
-
-#particle-background {
-  position: absolute;
-  width: 100%;
-  height: 1000%;
-}
